--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -17,7 +17,7 @@ labels:
   'test':
     include:
       - '\btest\b'
-  'feature':
+  '✨feature':
     include:
       - '\bfeat\b'
   'documentation':
