--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -1,10 +1,10 @@
-name: Auto Assign
+name: Review Assign
 
 on:
   pull_request:
-    types: [opened, ready_for_review]
+    types: [opened, ready_for_review, reopened]
   issues:
-    types: [opened]
+    types: [opened, reopened]
 
 jobs:
   assign_pull_request:
@@ -13,7 +13,9 @@ jobs:
     steps:
       - uses: hkusu/review-assign-action@v1
         with:
-          assignees: ${{ github.actor }} # assign pull request author
+          assignees: ${{ github.actor }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_SECRET_TOKEN }}
 
   assign_issue:
     runs-on: ubuntu-latest
@@ -21,4 +23,6 @@ jobs:
     steps:
       - uses: hkusu/review-assign-action@v1
         with:
-          assignees: ${{ github.actor }} # assign issue author
+          assignees: ${{ github.actor }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_SECRET_TOKEN }}
