--- a/.github/workflows/label-on.yml
+++ b/.github/workflows/label-on.yml
@@ -43,7 +43,7 @@ jobs:
 
     steps:
       - name: Check for specific label on Issue
-        if: github.event_name == 'issue'
+        if: github.event_name == 'issues'
         id: check_label
         uses: actions/github-script@v6
         with:
