--- a/.github/workflows/label-on.yml
+++ b/.github/workflows/label-on.yml
@@ -19,41 +19,9 @@ jobs:
           github-token: ${{ secrets.MY_SECRET_TOKEN }}
           script: |
             const labelToCheck = 'your-label-name'; // 확인할 라벨 이름
-            const labels = context.payload.pull_request ? context.payload.pull_request.labels : context.payload.issue.labels;
+            const labels = context.payload.pull_request.labels;
             const hasLabel = labels.some(label => label.name === labelToCheck);
-
-            return { hasLabel: hasLabel };
-
-      - name: Comment if label is missing
-        if: steps.check_label.outputs.hasLabel == false
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.MY_SECRET_TOKEN }}
-          script: |
-            const issueOrPr = context.payload.pull_request ? 'pull request' : 'issue';
-            github.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-              body: `This ${issueOrPr} does not have the required label. Please add the label '${labelToCheck}' to proceed.`
-            });
-
-  check_issue_label_and_act:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Check for specific label on Issue
-        if: github.event_name == 'issues'
-        id: check_label
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.MY_SECRET_TOKEN }}
-          script: |
-            const labelToCheck = 'your-label-name'; // 확인할 라벨 이름
-            const labels = context.payload.issue.labels;
-            const hasLabel = labels.some(label => label.name === labelToCheck);
-
-            return { hasLabel: hasLabel };
+            return { hasLabel: hasLabel.toString() }; // 문자열로 반환
 
       - name: Comment if label is missing
         if: steps.check_label.outputs.hasLabel == 'false'
@@ -61,10 +29,11 @@ jobs:
         with:
           github-token: ${{ secrets.MY_SECRET_TOKEN }}
           script: |
-            const issueOrPr = context.payload.pull_request ? 'pull request' : 'issue';
+            const labelToCheck = 'your-label-name';
+            const issueOrPr = 'pull request';
             github.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number,
+              issue_number: context.payload.pull_request.number,
               body: `This ${issueOrPr} does not have the required label. Please add the label '${labelToCheck}' to proceed.`
             });
