--- a/.github/workflows/label-on.yml
+++ b/.github/workflows/label-on.yml
@@ -1,4 +1,4 @@
-name: Label On
+name: Review Assign
 
 on:
   pull_request:
@@ -21,17 +21,20 @@ jobs:
             const labelToCheck = 'your-label-name'; // 확인할 라벨 이름
             const labels = context.payload.pull_request.labels;
             const hasLabel = labels.some(label => label.name === labelToCheck);
-            core.setOutput('hasLabel', hasLabel.toString());
+            return { hasLabel: hasLabel.toString() }; // 문자열로 반환
 
       - name: Comment if label is missing
         if: steps.check_label.outputs.hasLabel == 'false'
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_SECRET_TOKEN }}
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.MY_SECRET_TOKEN }}
           script: |
             const labelToCheck = 'your-label-name';
             const issueOrPr = 'pull request';
-            github.issues.createComment({
+            const octokit = github.getOctokit(process.env.GITHUB_TOKEN);
+            await octokit.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.payload.pull_request.number,
