--- a/.github/workflows/label-on.yml
+++ b/.github/workflows/label-on.yml
@@ -25,16 +25,13 @@ jobs:
 
       - name: Comment if label is missing
         if: steps.check_label.outputs.hasLabel == 'false'
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_SECRET_TOKEN }}
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.MY_SECRET_TOKEN }}
           script: |
             const labelToCheck = 'your-label-name';
             const issueOrPr = 'pull request';
-            const octokit = github.getOctokit(process.env.GITHUB_TOKEN);
-            await octokit.issues.createComment({
+            await github.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.payload.pull_request.number,
