--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,8 +1,8 @@
 name: Auto Merge Changeset Release
 
 on:
-  pull_request_review:
-    types: [submitted]
+  pull_request:
+    types: [opened, ready_for_review]
 
 jobs:
   auto-merge:
