--- a/.github/workflows/bundling-size.yml
+++ b/.github/workflows/bundling-size.yml
@@ -11,4 +11,4 @@ jobs:
     - uses: actions/checkout@v2
     - uses: preactjs/compressed-size-action@v2
       with:
-        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        repo-token: "${{ secrets.MY_SECRET_TOKEN }}"
